--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -16,7 +16,7 @@
     "wedding_date": "Sunday, April 13, 2025",
     "save_calendar": "Save Google Calendar",
     "scroll_down": "Scroll Down",
-    "this_is_demo": "This is demo",
+    "this_is_demo": "Two Hearts, One Journey",
     "invitation_respect": "Without reducing respect, we invite you to attend our wedding ceremony:",
     "groom_name": "Luu Quoc Khanh",
     "bride_name": "Nguyen Thi Ngoc Nga",
@@ -56,7 +56,12 @@
     "no_comments": "No comments",
     "address_bride": "Duc Phu Hamlet, Phuc Thuan Commune, Pho Yen City, Thai Nguyen Province",
     "address_groom": "Hau Hamlet, Cao Xa Commune, Tan Yen District, Bac Giang Province",
-    "gift_desc": "Respectfully, for those who wish to give a token of love to us, you can do so through:"
+    "gift_desc": "Respectfully, for those who wish to give a token of love to us, you can do so through:",
+    "upload_instructions": "Share your precious moments with us by uploading your photos",
+    "upload_requirements": "Supported formats: JPG, PNG, GIF",
+    "cancel": "Cancel",
+    "upload_photo": "Upload photo",
+    "drag_drop": "Drag & frop your image here"
   },
   "time": {
     "just_now": "just now",
