Update wedding translating

--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -46,7 +46,7 @@
     "like_info": "Thử bấm thích giống Instagram bằng cách nhấn vào phần bình luận",
     "format_info": "Bạn cũng có thể định dạng văn bản giống như trên WhatsApp... thử xem nhé, cảm ơn bạn thân yêu",
     "send": "Gửi",
-    "the_wedding_of": "Lễ cưới của",
+    "the_wedding_of": "Happy wedding",
     "meaning_text": "Khi chúng tôi bắt đầu hành trình tươi đẹp này cùng nhau, chúng tôi được truyền cảm hứng bởi những lời dạy bất hủ và những tình cảm chân thành nắm bắt tinh thần của tình yêu và hôn nhân",
     "save_changes": "Lưu thay đổi",
     "footer_thanks": "Cảm ơn bạn vì sự quan tâm của bạn, đó là niềm vui và vinh dự lớn đối với chúng tôi.",
