--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -46,7 +46,7 @@
     "like_info": "Try liking like Instagram, by tapping the comment section",
     "format_info": "You can also format text like Whatsapp... try it too, thank you bestieee",
     "send": "Send",
-    "the_wedding_of": "The wedding of",
+    "the_wedding_of": "Happy wedding",
     "meaning_text": "As we embark on this beautiful journey together, we are inspired by the timeless wisdom and heartfelt sentiments that capture the essence of love and marriage",
     "save_changes": "Save changes",
     "footer_thanks": "Thank you for your attention, which are a great joy and honor for us.",
