--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -30,12 +30,11 @@
     "minutes": "Phút",
     "seconds": "Giây",
     "event_announcement": "Với lòng biết ơn và niềm vui, chúng tôi xin trân trọng thông báo về sự kiện này:",
-    "ceremony": "Lễ cưới",
+    "ceremony": "Lễ thành hôn",
     "reception": "Tiệc cưới",
-    "ceremony_time": "15:00 - Chủ nhật - 13.4.2025",
+    "ceremony_time": "13:00 - Chủ nhật - 13.4.2025",
     "reception_time": "15:00 - Chủ nhật - 13.4.2025",
     "view_maps": "Xem Google Maps",
-    "address": "RT 10 RW 02, Xã Pajerukan, Huyện Kalibagor, Tỉnh Banyumas, Trung Java 53191.",
     "wishes_prayers": "Lời chúc",
     "name": "Họ và tên",
     "presence": "Sự hiện diện",
