Update wedding translating

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -33,7 +33,8 @@
     "ceremony": "Ceremony",
     "reception": "Reception",
     "ceremony_time": "15:00 - Sunday - 13.4.2025",
-    "reception_time": "15:00 - Sunday - 13.4.2025",
+    "bride_reception_time": "10:00 - Sunday - 13.4.2025",
+    "groom_reception_time": "15:00 - Sunday - 13.4.2025",
     "view_maps": "View Google Maps",
     "address": "RT 10 RW 02, Pajerukan Village, Kalibagor District, Banyumas Regency, Central Java 53191.",
     "wishes_prayers": "Wishes",
@@ -54,8 +55,8 @@
     "upload": "Upload",
     "wedding_title": "Wedding of Quoc Khanh & Ngoc Nga",
     "no_comments": "No comments",
-    "address_bride": "Duc Phu Hamlet, Phuc Thuan Commune, Pho Yen City, Thai Nguyen Province",
-    "address_groom": "Hau Hamlet, Cao Xa Commune, Tan Yen District, Bac Giang Province",
+    "address_groom": "Duc Phu Hamlet, Phuc Thuan Commune, Pho Yen City, Thai Nguyen Province",
+    "address_bride": "Hau Hamlet, Cao Xa Commune, Tan Yen District, Bac Giang Province",
     "gift_desc": "Respectfully, for those who wish to give a token of love to us, you can do so through:",
     "upload_instructions": "Share your precious moments with us by uploading your photos",
     "upload_requirements": "Supported formats: JPG, PNG, GIF",
