--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -33,7 +33,8 @@
     "ceremony": "Lễ thành hôn",
     "reception": "Tiệc cưới",
     "ceremony_time": "13:00 - Chủ nhật - 13.4.2025",
-    "reception_time": "15:00 - Chủ nhật - 13.4.2025",
+    "bride_reception_time": "10:00 - Chủ nhật - 13.4.2025",
+    "groom_reception_time": "15:00 - Chủ nhật - 13.4.2025",
     "view_maps": "Xem Google Maps",
     "wishes_prayers": "Lời chúc",
     "name": "Họ và tên",
@@ -53,8 +54,8 @@
     "upload": "Tải lên",
     "wedding_title": "Đám cưới của Quốc Khánh & Ngọc Nga",
     "no_comments": "Chưa có lời chúc nào",
-    "address_bride": "Xóm Đức Phú, Xã Phúc Thuận, TP Phổ Yên, Thái Nguyên",
-    "address_groom": "Xóm Hậu, Xã Cao Xá, Huyện Tân Yên, Bắc Giang",
+    "address_groom": "Xóm Đức Phú, Xã Phúc Thuận, TP Phổ Yên, Thái Nguyên",
+    "address_bride": "Xóm Hậu, Xã Cao Xá, Huyện Tân Yên, Bắc Giang",
     "gift_desc": "Rất trân trọng với những lới chúc cũng như món quà của tất cả mọi người:",
     "upload_instructions": "Chia sẻ những khoảnh khắc quý giá của bạn với chúng tôi bằng cách tải lên ảnh của bạn.",
     "upload_requirements": "Định dạng hỗ trợ: JPG, PNG, GIF",
