--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -33,8 +33,8 @@
     "ceremony": "Ceremony",
     "reception": "Reception",
     "ceremony_time": "15:00 - Sunday - 13.4.2025",
-    "bride_reception_time": "10:00 - Sunday - 13.4.2025",
-    "groom_reception_time": "15:00 - Sunday - 13.4.2025",
+    "bride_reception_time": "Bride: 10:00 - Sunday - 13.4.2025",
+    "groom_reception_time": "Groom: 15:00 - Sunday - 13.4.2025",
     "view_maps": "View Google Maps",
     "address": "RT 10 RW 02, Pajerukan Village, Kalibagor District, Banyumas Regency, Central Java 53191.",
     "wishes_prayers": "Wishes",
