--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -33,8 +33,8 @@
     "ceremony": "Lễ thành hôn",
     "reception": "Tiệc cưới",
     "ceremony_time": "13:00 - Chủ nhật - 13.4.2025",
-    "bride_reception_time": "10:00 - Chủ nhật - 13.4.2025",
-    "groom_reception_time": "15:00 - Chủ nhật - 13.4.2025",
+    "bride_reception_time": "Nhà gái: 10:00 - Chủ nhật - 13.4.2025",
+    "groom_reception_time": "Nhà trai: 15:00 - Chủ nhật - 13.4.2025",
     "view_maps": "Xem Google Maps",
     "wishes_prayers": "Lời chúc",
     "name": "Họ và tên",
