Update wedding translating

--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -17,7 +17,7 @@
     "save_calendar": "Lưu vào Google Calendar",
     "scroll_down": "Cuộn xuống",
     "this_is_demo": "Hai Trái Tim, Một Hành Trình",
-    "invitation_respect": "Trân trọng kính mời quý vị đến tham dự lễ cưới của chúng tôi:",
+    "invitation_respect": "Trân trọng kính mời quý vị đến tham dự lễ cưới của chúng tôi",
     "groom_name": "Lưu Quốc Khánh",
     "bride_name": "Nguyễn Thị Ngọc Nga",
     "first_son": "Trưởng nam",
@@ -29,7 +29,7 @@
     "hours": "Giờ",
     "minutes": "Phút",
     "seconds": "Giây",
-    "event_announcement": "Với lòng biết ơn và niềm vui, chúng tôi xin trân trọng thông báo về sự kiện này:",
+    "event_announcement": "Với lòng biết ơn và niềm vui, chúng tôi xin trân trọng thông báo về sự kiện này",
     "ceremony": "Lễ thành hôn",
     "reception": "Tiệc cưới",
     "ceremony_time": "13:30 - Chủ nhật - 13.4.2025",
@@ -56,7 +56,7 @@
     "no_comments": "Chưa có lời chúc nào",
     "address_groom": "Xóm Đức Phú, Xã Phúc Thuận, TP Phổ Yên, Thái Nguyên",
     "address_bride": "Xóm Hậu, Xã Cao Xá, Huyện Tân Yên, Bắc Giang",
-    "gift_desc": "Rất trân trọng với những lới chúc cũng như món quà của tất cả mọi người:",
+    "gift_desc": "Rất trân trọng với những lới chúc cũng như món quà của tất cả mọi người",
     "upload_instructions": "Chia sẻ những khoảnh khắc quý giá của bạn với chúng tôi bằng cách tải lên ảnh của bạn.",
     "upload_requirements": "Định dạng hỗ trợ: JPG, PNG, GIF",
     "cancel": "Hủy bỏ",
