--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -17,7 +17,7 @@
     "save_calendar": "Save Google Calendar",
     "scroll_down": "Scroll Down",
     "this_is_demo": "Two Hearts, One Journey",
-    "invitation_respect": "Without reducing respect, we invite you to attend our wedding ceremony:",
+    "invitation_respect": "Without reducing respect, we invite you to attend our wedding ceremony",
     "groom_name": "Luu Quoc Khanh",
     "bride_name": "Nguyen Thi Ngoc Nga",
     "first_son": "First Son",
@@ -29,7 +29,7 @@
     "hours": "Hours",
     "minutes": "Minutes",
     "seconds": "Seconds",
-    "event_announcement": "With gratitude and joy, we are pleased to announce that we will hold the event:",
+    "event_announcement": "With gratitude and joy, we are pleased to announce that we will hold the event",
     "ceremony": "Ceremony",
     "reception": "Reception",
     "ceremony_time": "13:30 - Sunday - 13.4.2025",
@@ -56,7 +56,7 @@
     "no_comments": "No comments",
     "address_groom": "Duc Phu Hamlet, Phuc Thuan Commune, Pho Yen City, Thai Nguyen Province",
     "address_bride": "Hau Hamlet, Cao Xa Commune, Tan Yen District, Bac Giang Province",
-    "gift_desc": "Respectfully, for those who wish to give a token of love to us, you can do so through:",
+    "gift_desc": "Respectfully, for those who wish to give a token of love to us, you can do so through",
     "upload_instructions": "Share your precious moments with us by uploading your photos",
     "upload_requirements": "Supported formats: JPG, PNG, GIF",
     "cancel": "Cancel",
